# discord-openai

./: Cargo.toml  README.md  docker-compose.yaml
src/: main.rs
